@@ -12,9 +12,8 @@ This directory contains these utilities:
 
 
 These utilities can be built for Linux or FreeBSD. To build sg_chk_asc
-in FreeBSD the sg_lib.o file must be present (i.e. compiled) in the
-main directory. The hxascdmp utility can be built in a Windows
-MinGW/MSYS environment.
+the sg_lib.o file must be present (i.e. compiled) in the lib/ directory.
+The hxascdmp utility can also be built in a Windows MinGW/MSYS environment.
 
 Doug Gilbert
-21st January 2007 
+21st December 2007 
