@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.26 [20071220]
+Changelog for sg3_utils-1.26 [20071221]
   - sg_ses: sync with ses2r19
   - sg_get_config: sync with mmc6r01
     - allow Microcode upgrade and DVD read feature descriptors
@@ -16,6 +16,7 @@ Changelog for sg3_utils-1.26 [20071220]
     rename original to sg__sat_phy_event
   - change 'long long' to int64_t and 'unsigned long long' to
     uint64_t to stress that 64 bit integer wanted, not larger
+  - sg_lib: update asc/ascq code pending spc4r12
 
 Changelog for sg3_utils-1.25 [20071016]
   - sg_stpg: new utility to Set Target Port Groups
